--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,15 @@
       sizes="16x16"
       href="<%=require('./favicon.png')%>"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap" rel="stylesheet">
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
   </head>
   <body class="body">
-    <h1>Ну что ж, начнём?</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="react-modals"></div>
