--- a/404.html
+++ b/404.html
@@ -36,5 +36,7 @@
     </script>
   </head>
   <body>
+    <span>👀 Страница не найдена 🧐</span>
+    <a href="https://hackalphafive.github.io/client/">Вернуться на главную.</a>
   </body>
 </html>
