--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       content="Web site created using create-react-app"
     />
   </head>
-  <body class="body">
+  <body class="body custom-scroll">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="react-modals"></div>
